--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://Maryiamreda.github.io/Bento-grid",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
